feature-1025205 updating endpoints
